--- a/front-end/src/components/Item/style.css
+++ b/front-end/src/components/Item/style.css
@@ -1,5 +1,19 @@
-
-
 .item {
-    
+    border-width: 300px;
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+}
+
+.img {
+    border: 1px solid;
+    border-radius: 10px;
+    width: 150px;
+    margin-bottom: 25px;
+}
+
+.item-name {
+    margin-left: 20px;
+    margin-right: 20px;
+    font-size: 15px;
 }
