--- a/front-end/src/components/Item/style.css
+++ b/front-end/src/components/Item/style.css
@@ -13,7 +13,19 @@
 }
 
 .item-name {
+    font-size: 15px;
+}
+
+.item-price {
+    font-size: 15px;
+    font-weight: bold;
+}
+
+.item-description {
     margin-left: 20px;
     margin-right: 20px;
-    font-size: 15px;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    
 }
