--- a/front-end/src/components/Products/style.css
+++ b/front-end/src/components/Products/style.css
@@ -2,15 +2,15 @@
     display: flex;
     flex-direction: column;
     align-content: center;
-    max-width: 1000px;
     border: 1px solid;
+    width: 600px;
     border-radius: 10px;
 }
 
 .header-title {
-    margin-top: 30px;
+    margin-top: 10px;
     margin-bottom: 10px;
-    padding-bottom: 20px;
+    padding-bottom: 10px;
     font-size: 28px;
     border-bottom: 1px solid;
 }
@@ -61,13 +61,15 @@
     background-color: #1e53ff;
     border: 1px solid;
     border-radius: 10px;
-    width: 400px;
+    width: 500px;
     color: white;
-    padding: 15px 32px;
+    padding: 20px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 20px;
+    font-size: 25px;
+    font-family: Tahoma, sans-serif;
+    font-weight: 800;
 }
 
 .message {
