--- a/front-end/src/components/Item/style.css
+++ b/front-end/src/components/Item/style.css
@@ -1,8 +1,6 @@
 .item {
     border-width: 300px;
     display: flex;
-    flex-direction: row;
-    justify-content: left;
 }
 
 .img {
@@ -10,6 +8,7 @@
     border-radius: 10px;
     width: 150px;
     margin-bottom: 25px;
+    height: 180px;
 }
 
 .item-name {
@@ -23,9 +22,23 @@
 
 .item-description {
     margin-left: 20px;
-    margin-right: 20px;
+    width: 100%;
+}
+
+.btn-container {
     display: flex;
-    flex-direction: column;
-    text-align: left;
-    
+    height: 25px;
+    width: 100%;
+    padding-right: 20px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    justify-content: space-around;
+}
+
+.btn-remove {
+    background-color: unset;
+    border: unset;
+    width: 70px;
+    font-weight: 500;
+    text-decoration: underline;
 }
